1. test projects/etc-java-test-by-non-gradle/src/test/grammer/clazz/NestedValueReference.java
package test.grammer.clazz;

public class NestedValueReference {

    int a;
    static int b;

    static class StaticNested {
        public void setVal() {
//            a = 3; // error
            b = 3;
        }
    }

    class InnerNested {
        public void setVal() {
            a = 3;
            b = 3;
        }
    }
}
